--- a/AYA/home/templates/home/detail.html
+++ b/AYA/home/templates/home/detail.html
@@ -1,9 +1,9 @@
-{% extends 'index.html' %}
+{% extends "index.html" %}
 
 {% block content %}
-<ul>
-	<h2 class="card">{{ grade.student }}</h2>
 
-</ul>
+	<h2 class="card">{{ names }}</h2>
+	<h2>lets goooo</h2>
+
 
 {% endblock %}
