--- a/AYA/home/templates/home/detail.html
+++ b/AYA/home/templates/home/detail.html
@@ -1,9 +1,19 @@
-{% extends "index.html" %}
+{% extends 'home/index.html' %}
 
 {% block content %}
+ 
 
-	<h2 class="card">{{ names }}</h2>
-	<h2>lets goooo</h2>
 
+        {% for student_instance in students %}
+        
+           <p>{{ student_instance.name }} {{ student_instance.first_name }}</p>
+
+
+           
+        {% endfor %}
+  
+  
+ 
+   
 
 {% endblock %}
