--- a/AYA/home/templates/home/deleteS.html
+++ b/AYA/home/templates/home/deleteS.html
@@ -22,6 +22,8 @@
             text-align: center;
         }
 
+        /* Le style pour #carre n'est pas utilisé dans votre HTML. 
+           Si vous n'avez pas de div avec l'id 'carre', vous pouvez supprimer ce style. */
         #carre {
             background-color: gray;
             padding: 70px;
@@ -30,18 +32,16 @@
             text-align: left;
         }
 
+        /* Le style pour les éléments 'li' semble inutilisé. 
+           Si vous n'avez pas de liste, vous pouvez supprimer ce style. */
         li {
             background-color: #fff;
-            
             margin: 10px;
-           
-            
-             /* Calcul de la largeur pour 5 éléments par ligne avec marges */
-            
+            /* Le commentaire sur la largeur est incomplet et le style n'est pas défini. */
         }
 
         #ajouterButton {
-            background-color: darkgray; /* Couleur verte */
+            background-color: darkgray; /* Couleur grise */
             color: white;
             padding: 10px 20px;
             border: none;
@@ -51,23 +51,22 @@
     </style>
 </head>
 <body>
-    
-    
     <div id="rectangle">
-        <h2>Student Creation</h2>
+        <h2>Supprimer un étudiant </h2>
+        <form action="" method="post">
+            {% csrf_token %}
+            <label for="name"> Taper votre nom de famille pour supprimer l'utilisateur:</label>
+            <input type="text" id="name" name="name">
+            <br><br>
+            <button type="submit">Supprimer</button>
+        </form>
+                {% if messages %}
+            <ul>
+                {% for message in messages %}
+                    <li>{{ message }}</li>
+                {% endfor %}
+            </ul>
+        {% endif %}
 
-        {% block content %}
-                
-
-        {% endblock %}
-        <h2></h2>
-            <a id="ajouterButton" href="/" class="button">RETURN</a>
-           
-         
-                
-            
-        
-        
-    </div>
 </body>
 </html>
