--- a/AYA/home/templates/home/deleteS.html
+++ b/AYA/home/templates/home/deleteS.html
@@ -67,6 +67,8 @@
                 {% endfor %}
             </ul>
         {% endif %}
+        <p></p>
+        <a id="ajouterButton" href="/" class="button">RETURN</a>
 
 </body>
 </html>
