--- a/AYA/home/templates/home/index.html
+++ b/AYA/home/templates/home/index.html
@@ -72,7 +72,7 @@
 <body>
 
     <div id="rectangle">
-        <h2>Liste des Étudiants</h2>
+        <h2>Student List</h2>
        
                         
             {% block content %}
@@ -83,14 +83,21 @@
                 
             
        
-
+        
         <form action="" method="post">
             {% csrf_token %}
-            <label for="name"> Renter le nom de l'étudiant :</label>
+
+            <label for="name"> Enter the name :</label>
             <input type="text" id="name" name="name">
             <br><br>
-            <button type="submit">Générer</button>
+            <button type="submit">display</button>
         </form>
+        <p></p>
+        <a id="ajouterButton" href="/gpdf" class="button">Generate PDF</a>
+
+        <h2>Notes</h2> 
+        <a id="ajouterButton" href="/create-grade" class="button">ADD</a>
+        
         
     </div>
 
