--- a/AYA/home/templates/home/createG.html
+++ b/AYA/home/templates/home/createG.html
@@ -54,7 +54,7 @@
     
     
     <div id="rectangle">
-        <h2>Student Creation</h2>
+        <h2>Add new grade</h2>
 
         {% block content %}
                 
