--- a/AYA/home/templates/home/gpdf.html
+++ b/AYA/home/templates/home/gpdf.html
@@ -39,6 +39,13 @@
              /* Calcul de la largeur pour 5 éléments par ligne avec marges */
             
         }
+        #ajouterButton {
+            background-color: darkgray; /* Couleur verte */
+            color: white;
+            padding: 10px 20px;
+            border: none;
+            border-radius: 5px;
+            cursor: pointer;
     </style>
 </head>
 <body>
@@ -51,6 +58,8 @@
             <br><br>
             <button type="submit">Générer</button>
         </form>
+        <h2></h2>
+            <a id="ajouterButton" href="/" class="button">RETURN</a>
         {% if message %}
             <p>{{ message }}</p>
         {% endif %}
